# abbreviate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-names-auto.yml  build-names.yml  ci.yml  nightly.yml  pages.yml
crates/abbrev-cli/: Cargo.toml
crates/abbrev-cli/src/: generate.rs  main.rs  snapshot.rs  tune.rs
crates/abbrev-core/: Cargo.toml
crates/abbrev-core/data/: demo.tsv
crates/abbrev-core/src/: alphabet.rs  context.rs  edit.rs  engine.rs  history.rs  lexicon.rs  lib.rs  mask.rs  morph.rs  ngram.rs  paradigm.rs  rank.rs  recency.rs  shortcuts.rs  tone.rs
crates/abbrev-core/src/index/: mod.rs  prefix_map.rs
crates/abbrev-core/tests/: properties.rs
crates/abbrev-ffi/: Cargo.toml
crates/abbrev-ffi/src/: lib.rs
crates/abbrev-wasm/: Cargo.toml
crates/abbrev-wasm/src/: lib.rs
data/bench/: adversarial.tsv  basic.tsv  function.tsv  morph.tsv  slang.tsv  translit.tsv
data/lexicons/: ru-50k.tsv  ru-hold-groups.tsv  ru-names.sample.tsv
data/mask/: ru.txt
data/shortcuts/: ru.tsv
data/tone/: ru.tsv
data/translit/: ru-tech.tsv
docs/: ARCHITECTURE.md  BENCHMARKS.md  DIAGNOSTICS.md  RESEARCH-RECENCY-CACHE.md  RESEARCH-proofing.md  RESEARCH.md  ROADMAP.md
docs/adr/: 0001-rust-core-thin-shells.md  0002-sans-io-zero-dependency-core.md  0003-uniffi-wasm-bindings.md  0004-lexicon-artifact-format.md
tools/lexicon-builder/: Cargo.toml
tools/lexicon-builder/scripts/: lemmatize.py  mine_corpus.py  names.py  paradigms.py
tools/lexicon-builder/src/: bigrams.rs  expand.rs  main.rs  rnc.rs
tools/uniffi-bindgen/: Cargo.toml
tools/uniffi-bindgen/src/: main.rs
