[package]
name = "abbrev-wasm"
description = "wasm-bindgen bindings of the abbreviation engine for web and webview (Tauri) frontends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abbrev-core = { workspace = true }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.wasm-pack.profile.release]
# binaryen's wasm-opt is fetched from GitHub releases at build time, which
# the sandbox blocks; the unoptimized module is fine for the demo.
wasm-opt = false
