[package]
name = "uniffi-bindgen"
description = "Thin uniffi-bindgen CLI for generating the Kotlin/Swift bindings of abbrev-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
